k8s/02-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
  labels:
    app: flask
spec:
  ports:
    - port: 5000
  selector:
    app: flask
---
appVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: nginx
          image: dock.io/backend:v1
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
          ports:
            - containerPort: 5000
