k8s/04-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
  labels:
    app: flask
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  annotaions:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5000"
    prometheus.io/scheme: "http"
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: nginx
          image: acr2022alzver.azurecr.io/backend:v1
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
          ports:
            - containerPort: 5000
