k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agic-alzverev-proj
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
      paths:
        - path: /api/
          pathType: Prefix
          backend:
            service: 
              name: flask-backend
              port:
                number: 5000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-frontend
              port:
                number: 80
